// ArcBox gRPC API definitions.
//
// This service provides the primary API for arcbox CLI and other clients.
// It runs on the host and manages VMs and containers.
//
// Design sources:
// - internal-docs/architecture/cli-api.md
// - containerd API patterns

syntax = "proto3";

package arcbox.api;

// =============================================================================
// Container Service
// =============================================================================

// ContainerService manages container lifecycle.
service ContainerService {
    // Creates a new container.
    rpc CreateContainer(CreateContainerRequest) returns (CreateContainerResponse);

    // Starts a container.
    rpc StartContainer(StartContainerRequest) returns (StartContainerResponse);

    // Stops a container.
    rpc StopContainer(StopContainerRequest) returns (StopContainerResponse);

    // Removes a container.
    rpc RemoveContainer(RemoveContainerRequest) returns (RemoveContainerResponse);

    // Lists containers.
    rpc ListContainers(ListContainersRequest) returns (ListContainersResponse);

    // Inspects a container.
    rpc InspectContainer(InspectContainerRequest) returns (InspectContainerResponse);

    // Waits for a container to exit.
    rpc WaitContainer(WaitContainerRequest) returns (WaitContainerResponse);

    // Gets container logs.
    rpc ContainerLogs(ContainerLogsRequest) returns (stream LogEntry);

    // Executes a command in a container.
    rpc ExecContainer(ExecContainerRequest) returns (stream ExecOutput);
}

// =============================================================================
// Machine Service
// =============================================================================

// MachineService manages virtual machine lifecycle.
service MachineService {
    // Creates a new VM.
    rpc CreateMachine(CreateMachineRequest) returns (CreateMachineResponse);

    // Starts a VM.
    rpc StartMachine(StartMachineRequest) returns (StartMachineResponse);

    // Stops a VM.
    rpc StopMachine(StopMachineRequest) returns (StopMachineResponse);

    // Removes a VM.
    rpc RemoveMachine(RemoveMachineRequest) returns (RemoveMachineResponse);

    // Lists VMs.
    rpc ListMachines(ListMachinesRequest) returns (ListMachinesResponse);

    // Inspects a VM.
    rpc InspectMachine(InspectMachineRequest) returns (InspectMachineResponse);

    // Executes a command in a VM.
    rpc ExecMachine(ExecMachineRequest) returns (stream ExecOutput);

    // Opens an interactive shell to a VM.
    rpc ShellMachine(stream ShellInput) returns (stream ShellOutput);
}

// =============================================================================
// Image Service
// =============================================================================

// ImageService manages container images.
service ImageService {
    // Pulls an image from a registry.
    rpc PullImage(PullImageRequest) returns (stream PullProgress);

    // Removes an image.
    rpc RemoveImage(RemoveImageRequest) returns (RemoveImageResponse);

    // Lists images.
    rpc ListImages(ListImagesRequest) returns (ListImagesResponse);

    // Inspects an image.
    rpc InspectImage(InspectImageRequest) returns (InspectImageResponse);

    // Tags an image.
    rpc TagImage(TagImageRequest) returns (TagImageResponse);
}

// =============================================================================
// Network Service
// =============================================================================

// NetworkService manages Docker networks.
service NetworkService {
    // Creates a new network.
    rpc CreateNetwork(CreateNetworkRequest) returns (CreateNetworkResponse);

    // Removes a network.
    rpc RemoveNetwork(RemoveNetworkRequest) returns (RemoveNetworkResponse);

    // Lists networks.
    rpc ListNetworks(ListNetworksRequest) returns (ListNetworksResponse);

    // Inspects a network.
    rpc InspectNetwork(InspectNetworkRequest) returns (InspectNetworkResponse);
}

// =============================================================================
// System Service
// =============================================================================

// SystemService provides system-level operations.
service SystemService {
    // Gets system information.
    rpc GetInfo(GetInfoRequest) returns (GetInfoResponse);

    // Gets version information.
    rpc GetVersion(GetVersionRequest) returns (GetVersionResponse);

    // Pings the server.
    rpc Ping(PingRequest) returns (PingResponse);
}

// =============================================================================
// Common Types
// =============================================================================

// Empty message.
message Empty {}

// Key-value pair.
message KeyValue {
    string key = 1;
    string value = 2;
}

// Mount specification.
message Mount {
    string source = 1;
    string target = 2;
    string type = 3;
    bool readonly = 4;
}

// Port binding.
message PortBinding {
    uint32 container_port = 1;
    uint32 host_port = 2;
    string protocol = 3;
    string host_ip = 4;
}

// Resource limits.
message ResourceLimits {
    uint64 memory_bytes = 1;
    uint64 cpu_shares = 2;
    int64 cpu_quota = 3;
    uint64 cpu_period = 4;
    double cpus = 5;
}

// =============================================================================
// Container Messages
// =============================================================================

message CreateContainerRequest {
    // Container name.
    string name = 1;
    // Image reference.
    string image = 2;
    // Command to run.
    repeated string cmd = 3;
    // Entrypoint.
    repeated string entrypoint = 4;
    // Environment variables.
    map<string, string> env = 5;
    // Working directory.
    string working_dir = 6;
    // User.
    string user = 7;
    // Mounts.
    repeated Mount mounts = 8;
    // Port bindings.
    repeated PortBinding ports = 9;
    // Labels.
    map<string, string> labels = 10;
    // TTY allocation.
    bool tty = 11;
    // Keep stdin open.
    bool stdin_open = 12;
    // Resource limits.
    ResourceLimits resources = 13;
}

message CreateContainerResponse {
    // Container ID.
    string id = 1;
    // Warnings.
    repeated string warnings = 2;
}

message StartContainerRequest {
    // Container ID or name.
    string id = 1;
}

message StartContainerResponse {}

message StopContainerRequest {
    // Container ID or name.
    string id = 1;
    // Timeout in seconds before killing.
    uint32 timeout = 2;
}

message StopContainerResponse {}

message RemoveContainerRequest {
    // Container ID or name.
    string id = 1;
    // Force removal.
    bool force = 2;
    // Remove volumes.
    bool remove_volumes = 3;
}

message RemoveContainerResponse {}

message ListContainersRequest {
    // Show all containers (including stopped).
    bool all = 1;
    // Limit number of results.
    int32 limit = 2;
    // Filter by labels.
    map<string, string> filters = 3;
}

message ListContainersResponse {
    repeated ContainerSummary containers = 1;
}

message ContainerSummary {
    string id = 1;
    string name = 2;
    string image = 3;
    string state = 4;
    string status = 5;
    int64 created = 6;
    repeated PortBinding ports = 7;
    map<string, string> labels = 8;
}

message InspectContainerRequest {
    // Container ID or name.
    string id = 1;
}

message InspectContainerResponse {
    string id = 1;
    string name = 2;
    string image = 3;
    int64 created = 4;
    ContainerState state = 5;
    repeated string cmd = 6;
    repeated string entrypoint = 7;
    map<string, string> env = 8;
    string working_dir = 9;
    repeated Mount mounts = 10;
    repeated PortBinding ports = 11;
    map<string, string> labels = 12;
}

message ContainerState {
    string status = 1;
    bool running = 2;
    bool paused = 3;
    bool restarting = 4;
    bool dead = 5;
    int32 pid = 6;
    int32 exit_code = 7;
    string error = 8;
    string started_at = 9;
    string finished_at = 10;
}

message WaitContainerRequest {
    // Container ID or name.
    string id = 1;
    // Condition to wait for: "not-running", "next-exit", "removed".
    string condition = 2;
}

message WaitContainerResponse {
    // Exit code.
    int64 status_code = 1;
    // Error message if any.
    string error = 2;
}

message ContainerLogsRequest {
    // Container ID or name.
    string id = 1;
    // Follow log output.
    bool follow = 2;
    // Show stdout.
    bool stdout = 3;
    // Show stderr.
    bool stderr = 4;
    // Show timestamps.
    bool timestamps = 5;
    // Only entries since this timestamp (Unix seconds).
    int64 since = 6;
    // Only entries until this timestamp (Unix seconds).
    int64 until = 7;
    // Tail N lines (0 = all).
    int64 tail = 8;
}

message LogEntry {
    // Stream type: "stdout" or "stderr".
    string stream = 1;
    // Log data.
    bytes data = 2;
    // Timestamp (Unix nanoseconds).
    int64 timestamp = 3;
}

message ExecContainerRequest {
    // Container ID or name.
    string id = 1;
    // Command to execute.
    repeated string cmd = 2;
    // Environment variables.
    map<string, string> env = 3;
    // Working directory.
    string working_dir = 4;
    // User.
    string user = 5;
    // Allocate TTY.
    bool tty = 6;
    // Attach stdin.
    bool stdin = 7;
}

message ExecOutput {
    // Stream type: "stdout" or "stderr".
    string stream = 1;
    // Output data.
    bytes data = 2;
    // Exit code (only set when done).
    int32 exit_code = 3;
    // Is this the final message.
    bool done = 4;
}

// =============================================================================
// Machine Messages
// =============================================================================

message CreateMachineRequest {
    // Machine name.
    string name = 1;
    // Number of CPUs.
    uint32 cpus = 2;
    // Memory in bytes.
    uint64 memory = 3;
    // Disk size in bytes.
    uint64 disk_size = 4;
    // Kernel path (optional).
    string kernel = 5;
    // Initrd path (optional).
    string initrd = 6;
    // Kernel command line.
    string cmdline = 7;
}

message CreateMachineResponse {
    // Machine ID.
    string id = 1;
}

message StartMachineRequest {
    // Machine ID or name.
    string id = 1;
}

message StartMachineResponse {}

message StopMachineRequest {
    // Machine ID or name.
    string id = 1;
    // Force stop.
    bool force = 2;
}

message StopMachineResponse {}

message RemoveMachineRequest {
    // Machine ID or name.
    string id = 1;
    // Force removal.
    bool force = 2;
}

message RemoveMachineResponse {}

message ListMachinesRequest {
    // Show all machines.
    bool all = 1;
}

message ListMachinesResponse {
    repeated MachineSummary machines = 1;
}

message MachineSummary {
    string id = 1;
    string name = 2;
    string state = 3;
    uint32 cpus = 4;
    uint64 memory = 5;
    int64 created = 6;
}

message InspectMachineRequest {
    // Machine ID or name.
    string id = 1;
}

message InspectMachineResponse {
    string id = 1;
    string name = 2;
    string state = 3;
    uint32 cpus = 4;
    uint64 memory = 5;
    uint64 disk_size = 6;
    int64 created = 7;
    string kernel = 8;
    string initrd = 9;
    string cmdline = 10;
    // CID for vsock communication.
    uint32 cid = 11;
}

message ExecMachineRequest {
    // Machine ID or name.
    string id = 1;
    // Command to execute.
    repeated string cmd = 2;
    // Environment variables.
    map<string, string> env = 3;
    // Working directory.
    string working_dir = 4;
    // User.
    string user = 5;
    // Allocate TTY.
    bool tty = 6;
}

message ShellInput {
    // Input data.
    bytes data = 1;
    // Resize terminal.
    TerminalSize resize = 2;
}

message ShellOutput {
    // Output data.
    bytes data = 1;
    // Exit code (only set when done).
    int32 exit_code = 2;
    // Is this the final message.
    bool done = 3;
}

message TerminalSize {
    uint32 width = 1;
    uint32 height = 2;
}

// =============================================================================
// Image Messages
// =============================================================================

message PullImageRequest {
    // Image reference (e.g., "alpine:latest").
    string reference = 1;
    // Platform (e.g., "linux/arm64").
    string platform = 2;
}

message PullProgress {
    // Status message.
    string status = 1;
    // Layer ID.
    string id = 2;
    // Progress detail.
    string progress = 3;
    // Error message if any.
    string error = 4;
}

message RemoveImageRequest {
    // Image reference or ID.
    string reference = 1;
    // Force removal.
    bool force = 2;
}

message RemoveImageResponse {
    // Untagged images.
    repeated string untagged = 1;
    // Deleted images.
    repeated string deleted = 2;
}

message ListImagesRequest {
    // Show all images.
    bool all = 1;
    // Filter by labels.
    map<string, string> filters = 2;
}

message ListImagesResponse {
    repeated ImageSummary images = 1;
}

message ImageSummary {
    string id = 1;
    repeated string repo_tags = 2;
    repeated string repo_digests = 3;
    int64 created = 4;
    int64 size = 5;
    map<string, string> labels = 6;
}

message InspectImageRequest {
    // Image reference or ID.
    string reference = 1;
}

message InspectImageResponse {
    string id = 1;
    repeated string repo_tags = 2;
    repeated string repo_digests = 3;
    string parent = 4;
    string comment = 5;
    int64 created = 6;
    string author = 7;
    string architecture = 8;
    string os = 9;
    int64 size = 10;
    repeated string cmd = 11;
    repeated string entrypoint = 12;
    map<string, string> env = 13;
    string working_dir = 14;
    map<string, string> labels = 15;
}

message TagImageRequest {
    // Source image reference or ID.
    string source = 1;
    // Target repository.
    string repo = 2;
    // Target tag.
    string tag = 3;
}

message TagImageResponse {}

// =============================================================================
// System Messages
// =============================================================================

message GetInfoRequest {}

message GetInfoResponse {
    // Number of containers.
    int64 containers = 1;
    // Running containers.
    int64 containers_running = 2;
    // Paused containers.
    int64 containers_paused = 3;
    // Stopped containers.
    int64 containers_stopped = 4;
    // Number of images.
    int64 images = 5;
    // Number of machines.
    int64 machines = 6;
    // Running machines.
    int64 machines_running = 7;
    // Server version.
    string server_version = 8;
    // Operating system.
    string os = 9;
    // Architecture.
    string arch = 10;
    // Total memory.
    int64 mem_total = 11;
    // Number of CPUs.
    int32 ncpu = 12;
    // Data directory.
    string data_dir = 13;
}

message GetVersionRequest {}

message GetVersionResponse {
    // Version string.
    string version = 1;
    // API version.
    string api_version = 2;
    // Git commit.
    string git_commit = 3;
    // Build time.
    string build_time = 4;
    // OS.
    string os = 5;
    // Architecture.
    string arch = 6;
}

message PingRequest {}

message PingResponse {
    // API version.
    string api_version = 1;
}

// =============================================================================
// Network Messages
// =============================================================================

message CreateNetworkRequest {
    // Network name.
    string name = 1;
    // Driver (e.g., "bridge", "host", "none").
    string driver = 2;
    // Internal network (not connected to external network).
    bool internal = 3;
    // Labels.
    map<string, string> labels = 4;
}

message CreateNetworkResponse {
    // Network ID.
    string id = 1;
}

message RemoveNetworkRequest {
    // Network ID or name.
    string id = 1;
}

message RemoveNetworkResponse {}

message ListNetworksRequest {
    // Filter by labels.
    map<string, string> filters = 1;
}

message ListNetworksResponse {
    repeated NetworkSummary networks = 1;
}

message NetworkSummary {
    // Network ID.
    string id = 1;
    // Network name.
    string name = 2;
    // Driver.
    string driver = 3;
    // Scope (local, global).
    string scope = 4;
    // Created timestamp (RFC3339).
    string created = 5;
    // Internal network.
    bool internal = 6;
    // Attachable.
    bool attachable = 7;
    // Labels.
    map<string, string> labels = 8;
}

message InspectNetworkRequest {
    // Network ID or name.
    string id = 1;
}

message InspectNetworkResponse {
    // Network ID.
    string id = 1;
    // Network name.
    string name = 2;
    // Driver.
    string driver = 3;
    // Scope.
    string scope = 4;
    // Created timestamp (RFC3339).
    string created = 5;
    // Internal network.
    bool internal = 6;
    // Attachable.
    bool attachable = 7;
    // Labels.
    map<string, string> labels = 8;
    // Connected containers.
    map<string, NetworkContainer> containers = 9;
}

message NetworkContainer {
    // Container name.
    string name = 1;
    // Container endpoint ID.
    string endpoint_id = 2;
    // IPv4 address.
    string ipv4_address = 3;
    // IPv6 address.
    string ipv6_address = 4;
}
